fix package json

--- a/apiServerless/package.json
+++ b/apiServerless/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "jeffnunn@amazon.com",
+  "author": "rafael@rfbarbosa.com",
   "dependencies": {
-    "twilio": ">= 2.0.0"
+    
   }
 }
